// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Properly computes trees # 1`] = `
"
Accessories
··Jewelry
··Glasses
Groceries
Apparel"
`;

exports[`Properly computes trees # 2`] = `
"
Groceries
··Accessories
····Jewelry
······Glasses
Apparel"
`;

exports[`Properly computes trees # 3`] = `
"
Apparel
··Groceries
····Accessories
······Jewelry
········Glasses"
`;

exports[`Properly computes trees # 4`] = `
"
Accessories
Glasses
Jewelry
··Groceries
····Apparel"
`;

exports[`Properly computes trees # 5`] = `
"
Jewelry
··Groceries
Glasses
··Apparel
····Accessories"
`;

exports[`Properly computes trees # 6`] = `
"
Groceries
Apparel"
`;

exports[`Properly computes trees # 7`] = `
"
Apparel"
`;

exports[`Properly computes trees > # 1`] = `
"
Accessories
··Jewelry
··Glasses
Groceries
Apparel"
`;

exports[`Properly computes trees > # 2`] = `
"
Groceries
··Accessories
····Jewelry
······Glasses
Apparel"
`;

exports[`Properly computes trees > # 3`] = `
"
Apparel
··Groceries
····Accessories
······Jewelry
········Glasses"
`;

exports[`Properly computes trees > # 4`] = `
"
Accessories
Glasses
Jewelry
··Groceries
····Apparel"
`;

exports[`Properly computes trees > # 5`] = `
"
Jewelry
··Groceries
Glasses
··Apparel
····Accessories"
`;

exports[`Properly computes trees > # 6`] = `
"
Groceries
Apparel"
`;

exports[`Properly computes trees > # 7`] = `
"
Apparel"
`;
